k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dfms
  labels:
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/enforce-version: latest
